@@ -15,7 +15,7 @@
         
 
         <control type="group">
-            <visible allowhiddenfocus="true">!$EXP[Exp_PlotOverlay_Visible]</visible>
+            <visible allowhiddenfocus="true">!$EXP[Exp_HideFurniture]</visible>
             <include>Object_UpDownInfoArrows</include>
             <include>Animation_FadeInOut</include>
             <control type="group">
