@@ -25,7 +25,7 @@
         <include>Topbar_Info</include>
 
         <control type="group">
-            <visible allowhiddenfocus="true">!$EXP[Exp_PlotOverlay_Visible]</visible>
+            <visible allowhiddenfocus="true">!$EXP[Exp_HideFurniture]</visible>
             <include>Animation_FadeInOut</include>
             <include>Object_UpDownInfoArrows</include>
             <control type="group">
@@ -609,14 +609,96 @@
         <control type="group">
             <visible>Player.HasVideo</visible>
             <visible>!String.IsEmpty(Window(Home).Property(TrailerPlaying))</visible>
-            <include>Animation_FadeIn</include>
+            <include>Animation_FadeIn_Slide</include>
             <include>Animation_FadeOut</include>
+            <centerleft>50%</centerleft>
+            <centertop>50%</centertop>
+            <width>1280</width>
+            <height>720</height>
             <control type="image">
                 <texture colordiffuse="ff000000">common/white.png</texture>
             </control>
             <control type="videowindow">
                 <width>100%</width>
                 <height>100%</height>
+            </control>
+             <control type="image">
+                <centerleft>50%</centerleft>
+                <top>-140</top>
+                <aspectratio>keep</aspectratio>
+                <height>100</height>
+                <texture>$INFO[ListItem.Art(clearlogo)]</texture>
+            </control>
+            <control type="group">
+                <height>10</height>
+                <width>1294</width>
+                <top>784</top>
+                <left>-7</left>
+                <control type="progress" id="401">
+                    <height>100%</height>
+                    <width>100%</width>
+                    <info>Player.Progress</info>
+                </control>
+                <control type="progress">
+                    <description>Progressbar</description>
+                    <height>100%</height>
+                    <width>100%</width>
+                    <info>Player.Progress</info>
+                    <texturebg colordiffuse="00ffffff" border="4">diffuse/progress-bg.png</texturebg>
+                    <lefttexture colordiffuse="00ffffff" border="4">diffuse/progress-left.png</lefttexture>
+                    <midtexture colordiffuse="$VAR[ColorHighlight2]" border="4" diffuse="progress/diffuse.png">diffuse/progress-end.png</midtexture>
+                    <righttexture colordiffuse="$VAR[ColorHighlight2]" border="4" diffuse="progress/diffuse-end.png">diffuse/progress-right.png</righttexture>
+                    <include content="Defs_Progress_Colorfade">
+                        <param name="id" value="401" />
+                    </include>
+                </control>
+                <control type="group">
+                    <top>16</top>
+                    <control type="grouplist">
+                        <height>view_pad</height>
+                        <align>left</align>
+                        <itemgap>12</itemgap>
+                        <usecontrolcoords>true</usecontrolcoords>
+                        <orientation>horizontal</orientation>
+                        <control type="label">
+                            <textcolor>main_fg_100</textcolor>
+                            <width>1144</width>
+                            <include>Statusbar_Menubar_Items</include>
+                            <label>$INFO[Player.Title]</label>
+                        </control>
+                    </control>
+                    <control type="grouplist">
+                        <height>view_pad</height>
+                        <align>right</align>
+                        <itemgap>12</itemgap>
+                        <usecontrolcoords>true</usecontrolcoords>
+                        <orientation>horizontal</orientation>
+                        <control type="label">
+                            <textcolor>main_fg_100</textcolor>
+                            <include>Statusbar_Menubar_Items</include>
+                            <label>$INFO[Player.Time]</label>
+                        </control>
+                        <control type="label">
+                            <textcolor>main_fg_100</textcolor>
+                            <include>Statusbar_Menubar_Items</include>
+                            <label>|</label>
+                        </control>
+                        <control type="label">
+                            <textcolor>main_fg_100</textcolor>
+                            <include>Statusbar_Menubar_Items</include>
+                            <label>$INFO[Player.Duration]</label>
+                        </control>
+                    </control>
+                </control>
+            </control>
+            <control type="group">
+                <left>-10</left>
+                <right>-10</right>
+                <top>-10</top>
+                <bottom>-10</bottom>
+                <include content="View_Selectbox">
+                    <param name="overlay" value="false" />
+                </include>
             </control>
         </control>
 
@@ -640,15 +722,15 @@
             <onclick condition="!String.IsEmpty(Window(Home).Property(TrailerPlaying))">SetFocus($INFO[Window(Home).Property(TrailerPlaying)])</onclick>
             <onclick>ClearProperty(TrailerPlaying,Home)</onclick>
 
-            <onleft condition="!String.IsEmpty(Window(Home).Property(TrailerPlaying)) + Player.HasMedia">Stop</onleft>
-            <onleft condition="String.IsEmpty(Window(Home).Property(TrailerPlaying))">SetFocus(300)</onleft>
-            <onleft condition="!String.IsEmpty(Window(Home).Property(TrailerPlaying))">SetFocus($INFO[Window(Home).Property(TrailerPlaying)])</onleft>
-            <onleft>ClearProperty(TrailerPlaying,Home)</onleft>
+            <onleft condition="!String.IsEmpty(Window(Home).Property(TrailerPlaying)) + Player.HasMedia">StepBack</onleft>
+            <onleft condition="String.IsEmpty(Window(Home).Property(TrailerPlaying)) + !Player.HasMedia">SetFocus(300)</onleft>
+            <onleft condition="!String.IsEmpty(Window(Home).Property(TrailerPlaying)) + !Player.HasMedia">SetFocus($INFO[Window(Home).Property(TrailerPlaying)])</onleft>
+            <onleft condition="!Player.HasMedia">ClearProperty(TrailerPlaying,Home)</onleft>
 
-            <onright condition="!String.IsEmpty(Window(Home).Property(TrailerPlaying)) + Player.HasMedia">Stop</onright>
-            <onright condition="String.IsEmpty(Window(Home).Property(TrailerPlaying))">SetFocus(300)</onright>
-            <onright condition="!String.IsEmpty(Window(Home).Property(TrailerPlaying))">SetFocus($INFO[Window(Home).Property(TrailerPlaying)])</onright>
-            <onright>ClearProperty(TrailerPlaying,Home)</onright>
+            <onright condition="!String.IsEmpty(Window(Home).Property(TrailerPlaying)) + Player.HasMedia">StepForward</onright>
+            <onright condition="String.IsEmpty(Window(Home).Property(TrailerPlaying)) + !Player.HasMedia">SetFocus(300)</onright>
+            <onright condition="!String.IsEmpty(Window(Home).Property(TrailerPlaying)) + !Player.HasMedia">SetFocus($INFO[Window(Home).Property(TrailerPlaying)])</onright>
+            <onright condition="!Player.HasMedia">ClearProperty(TrailerPlaying,Home)</onright>
 
             <onup condition="!String.IsEmpty(Window(Home).Property(TrailerPlaying)) + Player.HasMedia">Stop</onup>
             <onup condition="String.IsEmpty(Window(Home).Property(TrailerPlaying))">SetFocus(300)</onup>
