@@ -1843,7 +1843,7 @@
                     <right>view_pad</right>
                     <top>view_top</top>
                     <bottom>view_pad</bottom>
-                    <visible>$EXP[Exp_PlotOverlay_Visible]</visible>
+                    <visible>$EXP[Exp_PlotOverlay]</visible>
                     <include>Animation_FadeIn</include>
                     <control type="group">
                         <top>12</top>
