@@ -78,7 +78,7 @@
             <visible allowhiddenfocus="true">Control.HasFocus(431)</visible>
         </control>
         <control type="group">
-            <visible allowhiddenfocus="true">!$EXP[Exp_PlotOverlay_Visible]</visible>
+            <visible allowhiddenfocus="true">!$EXP[Exp_HideFurniture]</visible>
             <include>Animation_FadeInOut</include>
             <control type="group">
                 <include>Animation_Right</include>
