@@ -18,7 +18,7 @@
         <include>Topbar_Info</include>
 
         <control type="group">
-            <visible allowhiddenfocus="true">!$EXP[Exp_PlotOverlay_Visible]</visible>
+            <visible allowhiddenfocus="true">!$EXP[Exp_HideFurniture]</visible>
             <include>Animation_FadeInOut</include>
             <control type="group">
                 <include>Animation_Right_Delay</include>
