@@ -16,7 +16,7 @@
 
         <control type="group">
             <include>Object_UpDownInfoArrows</include>
-            <visible allowhiddenfocus="true">!$EXP[Exp_PlotOverlay_Visible]</visible>
+            <visible allowhiddenfocus="true">!$EXP[Exp_HideFurniture]</visible>
             <include>Animation_FadeInOut</include>
             <control type="group">
                 <include>Animation_Right_Delay</include>
