@@ -1,6 +1,7 @@
 [B]0.9.30[/B]
 SKINSETTINGS - Fix reset to defaults button
 PLOTOVERLAY - Hide clock in plot overlay
+DIALOGVIDEOINFO - Add new trailer window. Thanks to VikkiXavier for the design
 
 [B]0.9.29[/B]
 DEPENDENCY - Remove Skin Helper as Dependency (Now optional install)
